fixing photos on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -137,6 +137,8 @@ td.membertb {
 /* */
 img.reportimg {
   max-width: 50%;
+  width: 100%;
+  height: auto;
   float: left;
   margin: 10px auto;
   border-style: solid;
